5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1596_1014.log
== TEST (2019-04-02 15:39:35) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x+lucro
print(round(x,  2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x+lucro
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:39:53) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:40:01) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- EXECUTION TIME:
0.161421
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:40:15) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:40:38) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  1))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:40:46) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  1))

-- EXECUTION TIME:
0.237223
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:41:00) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:41:08) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- EXECUTION TIME:
0.208434
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:41:30) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:41:39) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- EXECUTION TIME:
0.14122
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:41:48) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:42:03) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- EXECUTION TIME:
0.131285
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:42:05) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- EXECUTION TIME:
0.135649
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:42:29) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:42:46) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:42:57) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30//100
x=lucro
print(round(x,  2))

-- EXECUTION TIME:
0.195573
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:45:48) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x,  2))

-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:45:56) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x,  2))

-- EXECUTION TIME:
0.168063
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
